--- a/MinningBot/Configs/configs.json
+++ b/MinningBot/Configs/configs.json
@@ -1,8 +1,10 @@
 {
-  "monitor_offset_x": 0,
-  "monitor_offset_y": 0,
-  "monitor_number": 1,
+  "monitor_offset_x": -1920,
+  "monitor_offset_y": 7,
+  "monitor_number": 2,
   "survey_scan_box": [1282, 612, 1842, 770],
+  "survey_scan_box_columns": [0.05, 0.45, 0.15, 0.18],
   "cargo_box": [372, 638, 630, 643],
-  "locations_box": [863, 135, 1326, 460]
+  "locations_box": [863, 135, 1326, 460],
+  "locations_box_columns": [1]
 }
