--- a/MinningBot/Configs/configs.json
+++ b/MinningBot/Configs/configs.json
@@ -1,6 +1,8 @@
 {
   "monitor_offset_x": -1920,
   "monitor_offset_y": 7,
+  "click_target_offset_x": 60,
+  "click_target_offset_y": 15,
   "monitor_number": 2,
   "survey_scan_box": [1282, 612, 1842, 770],
   "survey_scan_box_columns": [0.05, 0.45, 0.15, 0.18],
