--- a/MiningBot/Configs/configs.json
+++ b/MiningBot/Configs/configs.json
@@ -3,6 +3,8 @@
   "monitor_offset_y": 7,
   "click_target_offset_x": 60,
   "click_target_offset_y": 15,
+  "scanner_button_x": 1122,
+  "scanner_button_y": 900,
   "monitor_number": 2,
   "survey_scan_box": [1282, 612, 1842, 770],
   "survey_scan_box_columns": [0.05, 0.45, 0.15, 0.18],
