--- a/MiningBot/Configs/configs.json
+++ b/MiningBot/Configs/configs.json
@@ -89,6 +89,7 @@
     "click_target_offset_x": 60,
     "click_target_offset_y": 15,
     "mining_hold_target": [175, 730],
+    "miners": [1058, 820, 1188, 878],
     "scanner_button_target": [
       1122,
       900
