--- a/MiningBot/Configs/configs.json
+++ b/MiningBot/Configs/configs.json
@@ -1,7 +1,13 @@
 {
   "RedComputer": {
-    "screen_classifier_model":"O:\\source\\repos\\EVE-Online-Bot\\training_data\\screen_state.h5",
-    "screen_classifier_classes":"O:\\source\\repos\\EVE-Online-Bot\\training_data\\screen_state_classes.json",
+    "Classifiers": {
+      "mining_tool_state": {"image_resize": [116, 26],
+         "class_location": "O:\\source\\repos\\EVE-Online-Bot\\training_data_miner\\mining_tool_state_classes.json",
+         "model_location": "O:\\source\\repos\\EVE-Online-Bot\\training_data_miner\\mining_tool_state_model.h5"},
+      "game_state": {"image_resize": [206, 384],
+         "class_location": "O:\\source\\repos\\EVE-Online-Bot\\training_data\\game_state_classes.json",
+         "model_location": "O:\\source\\repos\\EVE-Online-Bot\\training_data\\game_state_model.h5"}
+    },
     "Eve_Launcher": "D:\\EVE\\Launcher\\evelauncher.exe",
     "mongo_host": "mongodb+srv://cluster0.ufnlr1u.mongodb.net/?retryWrites=true&w=majority",
     "mongo_authMechanism": "SCRAM-SHA-256",
@@ -77,8 +83,14 @@
     ]
   },
   "databrick": {
-    "screen_classifier_model":"E:\\Eve_Models\\screen_state.h5",
-    "screen_classifier_classes":"E:\\Eve_Models\\screen_state_classes.json",
+    "Classifiers": {
+      "mining_tool_state": {"image_resize": [116, 26],
+         "class_location": "E:\\Eve_Models\\mining_tool_state_classes.json",
+         "model_location": "E:\\Eve_Models\\mining_tool_state_model.h5"},
+      "game_state": {"image_resize": [206, 384],
+         "class_location": "E:\\Eve_Models\\game_state_classes.json",
+         "model_location": "E:\\Eve_Models\\game_state_model.h5"}
+    },
     "Eve_Launcher": "C:\\EVE\\Launcher\\evelauncher.exe",
     "mongo_host": "mongodb+srv://cluster0.ufnlr1u.mongodb.net/?retryWrites=true&w=majority",
     "mongo_authMechanism": "SCRAM-SHA-256",
