--- a/.gitignore
+++ b/.gitignore
@@ -128,5 +128,6 @@ dmypy.json
 # Pyre type checker
 .pyre/
 .idea
-/training_data/
-/training_data_miner/*/*.png
+/training_data/*/*/*.png
+/training_data/*/*.h5
+/training_data/*/*.json
