--- a/MiningBot/Configs/configs.json
+++ b/MiningBot/Configs/configs.json
@@ -2,11 +2,11 @@
   "RedComputer": {
     "Classifiers": {
       "mining_tool_state": {"image_resize": [116, 26],
-         "class_location": "O:\\source\\repos\\EVE-Online-Bot\\training_data_miner\\mining_tool_state_classes.json",
-         "model_location": "O:\\source\\repos\\EVE-Online-Bot\\training_data_miner\\mining_tool_state_model.h5"},
+         "class_location": "O:\\source\\repos\\EVE-Online-Bot\\training_data\\mining_tool_state\\mining_tool_state_classes.json",
+         "model_location": "O:\\source\\repos\\EVE-Online-Bot\\training_data\\mining_tool_state\\mining_tool_state_model.h5"},
       "game_state": {"image_resize": [206, 384],
-         "class_location": "O:\\source\\repos\\EVE-Online-Bot\\training_data\\game_state_classes.json",
-         "model_location": "O:\\source\\repos\\EVE-Online-Bot\\training_data\\game_state_model.h5"}
+         "class_location": "O:\\source\\repos\\EVE-Online-Bot\\training_data\\game_state\\game_state_classes.json",
+         "model_location": "O:\\source\\repos\\EVE-Online-Bot\\training_data\\game_state\\game_state_model.h5"}
     },
     "Eve_Launcher": "D:\\EVE\\Launcher\\evelauncher.exe",
     "mongo_host": "mongodb+srv://cluster0.ufnlr1u.mongodb.net/?retryWrites=true&w=majority",
