--- a/MiningBot/Configs/configs.json
+++ b/MiningBot/Configs/configs.json
@@ -56,7 +56,7 @@
       "Site One Alpha",
       "Site Three Alpha",
       "Site One Beta",
-      "Site Two Beta",
+      "Site Twa Beta",
       "Site Three Beta",
       "Site One Charlie",
       "Site Two Charlie",
@@ -124,7 +124,7 @@
       "Site One Alpha",
       "Site Three Alpha",
       "Site One Beta",
-      "Site Two Beta",
+      "Site Twa Beta",
       "Site Three Beta",
       "Site One Charlie",
       "Site Two Charlie",
